Reduced Thread sleep in TestMonitorActivity